--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
   <link rel="stylesheet" href="css/style.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1">  
 </head>
 
 <body>
@@ -14,7 +13,6 @@
 <div id="app">
   <main class="ui-content">
     <div class="ui-discounts">
-      <i class="fa fa-codepen"></i>
       <div class="ui-text"></div>
     </div>
     <div class="ui-value">
@@ -44,7 +42,7 @@
         </div>
       </div>
       
-      <div class="ui-controls">
+      <!--<div class="ui-controls">
         <div class="ui-switch">
           <label
             class="ui-switch-track"
@@ -53,7 +51,7 @@
           >
           </label>
         </div>
-      </div>
+      </div>-->
     </div>
   </main>
 </div>
