--- a/index.html
+++ b/index.html
@@ -42,22 +42,21 @@
         </div>
       </div>
       
-      <!--<div class="ui-controls">
-        <div class="ui-switch">
+      <div class="ui-controls">
+        <!--<div class="ui-switch">
           <label
             class="ui-switch-track"
             for="switch"
             title="on/off"
           >
           </label>
-        </div>
-      </div>-->
+        </div>-->
+      </div>
     </div>
   </main>
 </div>
   <script src='https://unpkg.com/@reactivex/rxjs@5.1.1/dist/global/Rx.min.js'></script>
-
-    <script src="js/index.js"></script>
+  <script src="js/index.js"></script>
 
 </body>
 </html>
