--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html >
 <head>
   <meta charset="UTF-8">
-  <title>Reactive Timeframe Concept</title>
+  <title>Timer @adamspgeek</title>
   <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
   <link rel="stylesheet" href="css/style.css">
@@ -41,22 +41,11 @@
           <div class="ui-range-thumb"></div>
         </div>
       </div>
-      
-      <div class="ui-controls">
-        <!--<div class="ui-switch">
-          <label
-            class="ui-switch-track"
-            for="switch"
-            title="on/off"
-          >
-          </label>
-        </div>-->
-      </div>
+      <div class="ui-controls"> </div>
     </div>
   </main>
 </div>
   <script src='https://unpkg.com/@reactivex/rxjs@5.1.1/dist/global/Rx.min.js'></script>
   <script src="js/index.js"></script>
-
 </body>
 </html>
